<resources>
    <string name="app_name">Suitmedia Test App</string>
    <string name="avatar">Avatar</string>
    <string name="name">Name</string>
    <string name="next">NEXT</string>
    <string name="check">CHECK</string>
    <string name="palindrome">Palindrome</string>
    <string name="ok">OK</string>
    <string name="is_palindrome">It\'s, Palindrome!</string>
    <string name="isnt_palindrome">It\'s not, Palindrome!</string>
    <string name="empty_palindrome">Palindrome can\'t empty.</string>
    <string name="empty_name">Name can\'t empty.</string>
    <string name="secondScreen">Second Screen</string>
    <string name="welcome">Welcome,</string>
    <string name="user">Arnold</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="choose_user">Choose a User</string>
    <string name="email">email@email.com</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="thirdScreen">Third Screen</string>
    <string name="koneksi_error">Koneksi Error</string>
    <string name="message">Message</string>
</resources>